--- a/day05/position.html
+++ b/day05/position.html
@@ -8,11 +8,11 @@
 </head>
 
 <body style="overflow: hidden;">
-    <div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.75); z-index: 200; text-align: center; padding-top: 50vh;">
+    <!-- <div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.75); z-index: 200; text-align: center; padding-top: 50vh;">
         <div style="margin-top: -100px; display: inline-block; border-radius: 10px; width: 500px; height: 200px; background-color: white; line-height: 200px; text-align: center;">
             Subscribe, like, and hit the bell.
         </div>
-    </div>
+    </div> -->
     <div>
         <div style="display: inline-block; width: 100px; height: 100px; background-color: pink;"></div>
         <div style="display: inline-block; width: 100px; height: 100px; background-color: lavender;"></div>
