Day 14 - Renamed file

--- a/day14/vars-exercise.html
+++ b/day14/vars-exercise.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercise 1</title>
+    <title>Variables</title>
 </head>
 
 <body>
-    <h1>Exercise 1</h1>
     <script type="text/javascript">
         // Create 3 variables containing 18, 27 and 3
         // Add them together and put the result into the exo1 variable
@@ -37,14 +36,6 @@
       // The result of the third calculation minus 400;
 
       // The result of the last calculation should be console logged with the given message: "The result is: {result of the last calcul}"
-
-      // BONUS
-      // Create a if condition and display a message if the number of the variable exo1 is bigger than 10
-      // Otherwise display an other message
-
-      // Create a switch condition that will return the number of day in a given month
-
-      // Create a switch that will do a calculation between two variable for a given operator
     </script>
 </body>
 
