--- a/day24/js-events-exercise2.html
+++ b/day24/js-events-exercise2.html
@@ -25,6 +25,11 @@
             font-size: 10rem;
         }
 
+        .boardAndHistory {
+            display: flex;
+            gap: 10rem;
+        }
+
         .board {
             display: flex;
             flex-direction: column;
@@ -48,6 +53,22 @@
             color: cornflowerblue;
         }
 
+        .historyTitle {
+            font-size: 3rem;
+        }
+
+        .historyMoves {
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .historyMoves li {
+            font-size: 2.5rem;
+            list-style: none;
+        }
+
         button {
             border: none;
             padding: 1rem 3rem;
@@ -62,7 +83,13 @@
 
 <body>
     <div class="title"></div>
-    <div class="board"></div>
+    <div class="boardAndHistory">
+        <div class="board"></div>
+        <div class="history">
+            <div class="historyTitle">Move History</div>
+            <ul class="historyMoves"></ul>
+        </div>
+    </div>
     <button>PLAY AGAIN</button>
     <script>
         // Exercise: Tic-tac-toe Game
@@ -81,8 +108,12 @@
         const boardElem = document.querySelector(".board");
         const titleElem = document.querySelector(".title");
         const resetButton = document.querySelector("button");
+        const moveHistoryList = document.querySelector(".historyMoves");
 
         let currentMove = 0;
+        let buttonsActive = true;
+        let moveHistory = [];
+        let replayingHistory = false;
 
         // Create the 3x3 grid of squares
         for (let i = 0; i < 3; i++) {
@@ -94,6 +125,10 @@
                 newSquare.className = "square";
 
                 newRow.appendChild(newSquare);
+
+                newRow.addEventListener("click", handleClick);
+                newRow.addEventListener("mouseover", handleMouseOver);
+                newRow.addEventListener("mouseout", handleMouseOut);
             }
 
             boardElem.appendChild(newRow);
@@ -104,14 +139,14 @@
         // Get the board ready to play. Tweaked a bit so that it can also be used at the end of a game.
         function resetBoard() {
             // Reset the squares.
-            allSquares.forEach(square => {
-                square.innerHTML = "";
-                square.addEventListener("click", handleClick);
-            });
+            allSquares.forEach(square => square.innerHTML = "");
 
             currentMove = 0;
             displayNextMove();
             resetButton.style.display = "none";
+            buttonsActive = true;
+
+            if (!replayingHistory) moveHistoryList.innerHTML = "";
         }
         resetBoard();  // Get ready to play first round!
 
@@ -119,7 +154,82 @@
             titleElem.innerHTML = `Next: ${currentMove % 2 === 0 ? 'X' : 'O'}`;
         }
 
+        function handleMouseOver(e) {
+            if (!buttonsActive) return;
+
+            if (e.target.innerHTML === "") {
+                e.target.style.backgroundColor = "rgba(144, 238, 144, 0.5)";
+            }
+            else {
+                e.target.style.backgroundColor = "rgba(255, 182, 193, 0.5)";
+            }
+        }
+
+        function handleMouseOut(e) {
+            e.target.style.backgroundColor = "";
+        }
+
+        function goBackToMove(moveNum) {
+            replayingHistory = true;
+
+            resetBoard();
+            for (let i = 0; i <= moveNum; i++) {
+                let moveFromHistory = moveHistory[i];
+                allSquares[moveFromHistory].click();
+            }
+
+            replayingHistory = false;
+        }
+
+        function addToMoveHistory(square) {
+            // Add to the moveHistory array.
+            // Doing my own "array.indexOf", but allSquare is not a true Array.
+            let currentMoveIdx = -1;
+            for (let i = 0; i < allSquares.length; i++) {
+                if (allSquares[i] === square) {
+                    currentMoveIdx = i;
+                }
+            }
+            moveHistory.push(currentMoveIdx);
+
+            // Adding to the moveHistoryList
+            // moveHistoryList.innerHTML += `<li>Move #${currentMove + 1}</li>`;
+            let newItem = document.createElement("li");
+            newItem.innerHTML = `Move #${currentMove + 1}`;
+            moveHistoryList.appendChild(newItem);
+
+            // Force the anonymous function for the event listener to get the value
+            // from this context, rather than the global context. The global variable
+            // will change, but this local variable stays whatever value it was when
+            // it was created.
+            let localCurrentMove = currentMove;
+            newItem.addEventListener("click", function () {
+                goBackToMove(localCurrentMove);
+            });
+        }
+
+        function trimHistoryToCurrent() {
+            moveHistory = moveHistory.slice(0, currentMove);
+
+            const allListItems = document.querySelectorAll(".historyMoves li");
+            for (let i = currentMove; i < allListItems.length; i++) {
+                allListItems[i].remove();
+            }
+        }
+
         function handleClick(e) {
+            // If the buttons should not be active, or the square is already filled, ignore.
+            if (!buttonsActive) return;
+            if (e.target.innerHTML !== "") return;
+
+            // Trim/add history only if not recreating history state (by clicking move list)
+            if (!replayingHistory) {
+                // If a new square is played while looking at history, trim history.
+                if (currentMove < moveHistory.length) trimHistoryToCurrent();
+
+                addToMoveHistory(e.target);
+            }
+
             let playerToken = "";
 
             if (currentMove % 2 === 0) playerToken = "X";
@@ -128,7 +238,7 @@
             e.target.innerHTML = playerToken;
 
             // Remove after it has processed it once.
-            e.target.removeEventListener("click", handleClick);
+            // e.target.removeEventListener("click", handleClick);
 
             // Check for winner.
             let allPlayerPositions = "";  // Collect all the proper positions.
@@ -137,8 +247,11 @@
             });
 
             let winnerFound = checkWinner(allPlayerPositions);
-            if (winnerFound) {
+            if (winnerFound !== "") {
                 titleElem.innerHTML = `CHIKIN: ${playerToken}`;
+                for (const pos of winnerFound) {
+                    allSquares[parseInt(pos)].style.color = "green";
+                }
                 gameOver();
             }
             else {
@@ -165,15 +278,20 @@
                         break;
                     }
                 }
-                if (allThere) return true;  // Found a winning combo!
+                if (allThere) return combo;  // Found a winning combo!
             }
-            return false;
+            return "";
         }
 
         // Things to do when the game is over, whether by winning or by cats.
         function gameOver() {
             // Disable the all the squares, since it's the end of the game.
-            allSquares.forEach(square => square.removeEventListener("click", handleClick));
+            // allSquares.forEach(square => {
+            //     square.removeEventListener("click", handleClick);
+            //     square.removeEventListener("mouseover", handleMouseOver);
+            //     square.removeEventListener("mouseout", handleMouseOut);
+            // });
+            buttonsActive = false;
 
             // Show the reset button.
             resetButton.style.display = "block";
@@ -187,8 +305,10 @@
 
         // 6. When hovering over a valid next move, the box background should turn a shade of green. When hoving over an invalid move, the box background should turn red.
 
+
         // 7. Keep a history of all moves taken and display each point in the "move history" as a link somewhere on the UI. (Eg. Move #5) The current move state will be a link in the move history called "Current".
         // Clicking on the link in the move list should take the gameboard back to that point in the move history.
+
 
         // 8. Even while viewing a past move using the move history, the user can then play another move, which creates a new future to follow (ie, resets the move history links to follow this new move into a new future),
         // or they can click back to any other move in the move history, including the future moves if they exist, including "Current" to get back to where they were before reviewing move history.
