--- a/day26/universities.html
+++ b/day26/universities.html
@@ -35,6 +35,42 @@
             z-index: -1;
         }
 
+        #combo {
+            display: flex;
+            gap: 0.25rem;
+            position: relative;
+        }
+
+        input {
+            width: 30rem;
+            /* height: 1.5rem; */
+            border-radius: var(--gen-border-radius);
+            border: 1px solid grey;
+            outline: none;
+            padding: 0.5rem 0.5rem;
+            font-size: inherit;
+        }
+
+        button {
+            background-color: slateblue;
+            color: white;
+            width: 200px;
+            font-size: inherit;
+            font-weight: inherit;
+            border: none;
+            border-radius: var(--gen-border-radius);
+        }
+
+        #matches {
+            position: absolute;
+            top: 2.6rem;
+            border: 1px solid lightgray;
+            background: white;
+            width: 30rem;
+            box-sizing: border-box;
+            display: none;
+        }
+
         #matches>div {
             padding: 0.1rem 0.5rem;
         }
@@ -45,7 +81,7 @@
         }
 
         #results {
-            height: 200px;
+            height: 150px;
             background: white;
             padding: 2rem 4rem;
             border-radius: var(--gen-border-radius);
@@ -66,47 +102,28 @@
 
 <body>
     <div class="overlay"></div>
+    <div id="combo">
+        <input tabindex="1" type="text" placeholder="Enter the name of a university...">
+        <div id="matches"></div>
+        <button tabindex="2">Search</button>
+    </div>
     <div id="results"></div>
-    <script src="combo.js"></script>
     <script>
-        const APIKEY = "75c2d1f793a8e8f3a571547c7d360935";
-
-        const overlayElem = document.querySelector(".overlay");
-        const comboElem = createCombo((qStr, aMatchesReceived) => getMatchingCitiesFromAPI(qStr, aMatchesReceived));
-        overlayElem.after(comboElem);
-
         const inputElem = document.querySelector("input");
         const matchesElem = document.querySelector("#matches");
         const buttonElem = document.querySelector("button");
         const resultsElem = document.querySelector("#results");
 
-        let allCities = [];
-
-        function getMatchingCitiesFromAPI(queryString, bMatchesReceived) {
-            // console.log("QUERY:", queryString, bMatchesReceived)
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `http://api.openweathermap.org/geo/1.0/direct?q=${queryString}&limit=20&appid=${APIKEY}`);
-            xhr.addEventListener("load", function () {
-                allCities = JSON.parse(xhr.responseText);
-                // console.log("ALL CITIES:", allCities);
-                if (allCities) {
-                    allCities.sort((a, b) => a.name.localeCompare(b.name));
-                    // allCities.sort((a, b) => {
-                    //     if (a.name < b.name) return -1;
-                    //     else if (a.name > b.name) return 1;
-                    //     else return 0;
-                    // });  // Same as above.
-                    let onlyCityNames = [];
-                    allCities.forEach(v => {
-                        const newCity = `${v.name}, ${v.state}, ${v.country}`;
-                        if (!onlyCityNames.includes(newCity)) onlyCityNames.push(newCity);
-                    });
-                    bMatchesReceived(onlyCityNames);
-                }
-            });
-            xhr.send();
-        }
         // const allSchools = JSON.parse(`[{"web_pages": ["http://www.marywood.edu"], "alpha_two_code": "US", "domains": ["marywood.edu"], "name": "Marywood University", "state-province": null, "country": "United States"}, {"web_pages": ["http://www.lindenwood.edu/"], "alpha_two_code": "US", "domains": ["lindenwood.edu"], "name": "Lindenwood University", "state-province": null, "country": "United States"}, {"web_pages": ["https://sullivan.edu/"], "alpha_two_code": "US", "domains": ["sullivan.edu"], "name": "Sullivan University", "state-province": null, "country": "United States"}, {"web_pages": ["https://www.fscj.edu/"], "alpha_two_code": "US", "domains": ["fscj.edu"], "name": "Florida State College at Jacksonville", "state-province": null, "country": "United States"}, {"web_pages": ["https://www.xavier.edu/"], "alpha_two_code": "US", "domains": ["xavier.edu"], "name": "Xavier University", "state-province": null, "country": "United States"}, {"web_pages": ["https://home.tusculum.edu/"], "alpha_two_code": "US", "domains": ["tusculum.edu"], "name": "Tusculum College", "state-province": null, "country": "United States"}]`);
+        let allSchools = [];
+        const xhr = new XMLHttpRequest();
+        xhr.open("GET", "http://universities.hipolabs.com/search?country=United+States");
+        xhr.addEventListener("load", function () {
+            allSchools = JSON.parse(xhr.responseText);
+            allSchools.sort((a, b) => a.name.localeCompare(b.name));
+        });
+        xhr.send();
+
         function showSchool() {
             matchesElem.style.display = "none";
 
@@ -166,6 +183,50 @@
         }
         // document.addEventListener("keyup", navSchool);
 
+        inputElem.addEventListener("keyup", function (event) {
+            // console.log("KEY EVENT:", event);
+
+            if (event.key === 'Enter') {
+                matchesElem.style.display = "none";
+                showSchool();
+            }
+            else if (event.key === 'ArrowDown') {
+                navSchool(event);
+            }
+            else {
+                // Reset all the match results.
+                matchesElem.style.display = "none";
+                matchesElem.innerHTML = "";
+
+                if (inputElem.value.length > 2) {  // Need at least 3 characters to start.
+                    // Search through the allSchools to find matching results.
+                    const matchingSchools = allSchools.filter(v => {
+                        const lowerName = v.name.toLowerCase();
+                        const lowerInput = inputElem.value.toLowerCase();
+                        return lowerName.includes(lowerInput);
+                    });
+
+                    // console.log("MATCHES:", matchingSchools, allSchools);
+                    matchingSchools.forEach((school, idx) => {
+                        const newDiv = document.createElement("div");
+                        newDiv.innerHTML = school.name;
+                        newDiv.tabIndex = idx + 3;
+
+                        newDiv.addEventListener("click", function () {
+                            selectSchool(school);
+                        });
+
+                        newDiv.addEventListener("keyup", navSchool);
+
+                        matchesElem.appendChild(newDiv);
+                    });
+
+                    matchesElem.style.display = "block";  // Show
+                }
+            }
+        });
+
+        inputElem.focus();
     </script>
 </body>
 
